
[package]
name = "atomic-time"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/al8n/atomic-time"
homepage = "https://github.com/al8n/atomic-time"
documentation = "https://docs.rs/atomic-time"
description = "`AtomicDuration`, `AtomicOptionDuration`, `AtomicSystemTime`, `AtomicOptionSystemTime`, `AtomicInstant` and `AtomicOptionInstant` for Rust."
license = "MIT/Apache-2.0"
rust-version = "1.70"
keywords = [
  "atomic",
  "no_std",
  "atomic-duration",
  "atomic-instant",
  "atomic-systemtime",
]
categories = [
  "development-tools",
  "concurrency",
  "no-std"
]

[features]
default = ["std"]
std = ["portable-atomic/std"]

[dependencies]
portable-atomic = "1.6"

serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
parking_lot = "0.12"
arc-swap = "1"

[[bench]]
path = "benches/bench.rs"
name = "bench"
harness = false

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
