
[package]
name = "atomic-time"
version = "0.1.6"
edition = "2018"
repository = "https://github.com/al8n/atomic-time"
homepage = "https://github.com/al8n/atomic-time"
documentation = "https://docs.rs/atomic-time"
description = "`AtomicDuration`, `AtomicOptionDuration`, `AtomicSystemTime`, `AtomicOptionSystemTime`, `AtomicInstant` and `AtomicOptionInstant` for Rust."
license = "MIT OR Apache-2.0"
rust-version = "1.34.0"
keywords = [
  "atomic",
  "no_std",
  "atomic-duration",
  "atomic-instant",
  "atomic-systemtime",
]
categories = [
  "development-tools",
  "concurrency",
  "no-std"
]
exclude = ["benchmark"]

[features]
default = ["std"]
std = ["portable-atomic/std", "once_cell"]

[dependencies]
portable-atomic = "1"
once_cell = { version = "1", optional = true }

serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
