
[package]
name = "atomic-time"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/al8n/atomic-time"
homepage = "https://github.com/al8n/atomic-time"
documentation = "https://docs.rs/atomic-time"
description = "Lock-free, thread-safe atomic versions of Duration, SystemTime, Instant and their Option variants"
license = "MIT OR Apache-2.0"
rust-version = "1.70.0"
keywords = [
  "atomic",
  "no_std",
  "atomic-duration",
  "atomic-instant",
  "atomic-systemtime",
]
categories = [
  "development-tools",
  "concurrency",
  "no-std"
]
exclude = ["benchmark"]

[features]
default = ["std"]
std = ["portable-atomic/std"]

[dependencies]
portable-atomic = "1"
serde = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
