[package]
name = "atomic-time-benchmark"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
atomic-time = { path = "../" }

[dev-dependencies]
criterion = "0.5"
parking_lot = "0.12"
arc-swap = "1"

[[bench]]
path = "benches/duration.rs"
name = "duration"
harness = false

[[bench]]
path = "benches/instant.rs"
name = "instant"
harness = false

[[bench]]
path = "benches/system_time.rs"
name = "system_time"
harness = false
